<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Testing App"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter 1st number"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/etFirst"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter 2st number"
        android:textSize="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/etSecond"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SUM"
        android:textSize="20dp"
        android:id="@+id/btnSum"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SUBTRACT"
        android:textSize="20dp"
        android:id="@+id/btnSub"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DIVIDE"
        android:textSize="20dp"
        android:id="@+id/btnDiv"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Result"
        android:textSize="30dp"
        android:id="@+id/tvOutput"/>

</LinearLayout>